--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-9MDVWTEPS9');
+  gtag('config', 'G-2QJWJEET31');
 </script>
 
   <meta charset="utf-8" />
